Basic grid and color on click using classes defined.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Jake's Etch-a-Sketch</title>
 </head>
 <body>
-    <h1>Jake's Etch-a-Sketch</h1>
+    <div class="header">Portfolio link</div>
+    <h1 class="title">Jake's Etch-a-Sketch</h1>
+    <div class="palette">Palette Placeholder</div>
+    <div class="canvas"></div>
+    <div class="footer">Created by Jake Browning, 2022</div>
 </body>
-</html>
+</html> 
