--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Jake's Etch-a-Sketch</title>
+    <title>Jake's Drawing Pad</title>
 </head>
 <body>
     <div class="header">Portfolio link</div>
-    <h1 class="title">Jake's Etch-a-Sketch</h1>
-    <div class="palette">Palette Placeholder</div>
-    <div class="canvas"></div>
+    <div class="workspace">
+        <div class="palette">
+            <h2>Jake's Drawing Pad</h2>
+            <p>Resize your canvas (2 to 100)</p>
+            <input type="number" id="canvasSize" min="2" max="100">
+            <button id="refresh">Refresh</button>
+        </div>
+        <div class="canvas"></div>
+    </div>
     <div class="footer">Created by Jake Browning, 2022</div>
 </body>
 </html> 
