Update flexbox spacing of elements, add placeholder radio buttons for color selection.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,41 @@
     <title>Jake's Drawing Pad</title>
 </head>
 <body>
-    <div class="header">Portfolio link</div>
+    <div class="sandwich header">Portfolio link</div>
     <div class="workspace">
         <div class="palette">
             <h2>Jake's Drawing Pad</h2>
             <p>Resize your canvas (2 to 100)</p>
             <input type="number" id="canvasSize" min="2" max="100">
             <button id="refresh">Refresh</button>
+            <br>
+            <input type="radio" id="red" name="colourChoice" value="red">
+            <label for="red">Red</label><br>
+            <input type="radio" id="orange" name="colourChoice" value="orange">
+            <label for="orange">Orange</label><br>
+            <input type="radio" id="yellow" name="colourChoice" value="yellow">
+            <label for="yellow">Yellow</label><br>
+            <input type="radio" id="green" name="colourChoice" value="green">
+            <label for="green">Green</label><br>
+            <input type="radio" id="blue" name="colourChoice" value="blue">
+            <label for="blue">Blue</label><br>
+            <input type="radio" id="indigo" name="colourChoice" value="indigo">
+            <label for="indigo">Indigo</label><br>
+            <input type="radio" id="violet" name="colourChoice" value="violet">
+            <label for="violet">Violet</label><br>
+            <input type="radio" id="pink" name="colourChoice" value="pink">
+            <label for="pink">Pink</label><br>
+            <input type="radio" id="brown" name="colourChoice" value="brown">
+            <label for="brown">Brown</label><br>
+            <input type="radio" id="black" name="colourChoice" value="black">
+            <label for="black">Black</label><br>
+            <input type="radio" id="white" name="colourChoice" value="white">
+            <label for="white">White</label><br>
+            <input type="radio" id="grey" name="colourChoice" value="grey">
+            <label for="grey">Grey</label><br>
         </div>
         <div class="canvas"></div>
     </div>
-    <div class="footer">Created by Jake Browning, 2022</div>
+    <div class="sandwich footer">Created by Jake Browning, 2022</div>
 </body>
 </html> 
