Add color selection function.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label for="pink">Pink</label><br>
             <input type="radio" id="brown" name="colourChoice" value="brown">
             <label for="brown">Brown</label><br>
-            <input type="radio" id="black" name="colourChoice" value="black">
+            <input type="radio" id="black" name="colourChoice" value="black" checked>
             <label for="black">Black</label><br>
             <input type="radio" id="white" name="colourChoice" value="white">
             <label for="white">White</label><br>
