Added random color option using inline-style manipulation.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             <input type="radio" id="white" name="colourChoice" value="white">
             <label for="white">White</label><br>
             <input type="radio" id="grey" name="colourChoice" value="grey">
-            <label for="grey">Grey</label><br>
+            <label for="grey">Grey</label><br><br>
+            <input type="radio" id="random" name="colourChoice" value="random">
+            <label for="random">Random!</label><br><br>
+            <input type="radio" id="eraser" name="colourChoice" value="eraser">
+            <label for="eraser">Erase</label>
         </div>
         <div class="canvas"></div>
     </div>
