Center text in header and footer.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Jake's Drawing Pad</title>
 </head>
 <body>
-    <div class="sandwich header">Portfolio link</div>
+    <div class="sandwich header">
+        <p>Portfolio Link</p>
+    </div>
     <div class="workspace">
         <div class="palette">
             <h2>Jake's Drawing Pad</h2>
@@ -82,6 +84,8 @@
         </div>
         <div class="canvas"></div>
     </div>
-    <div class="sandwich footer">Created by Jake Browning, 2022</div>
+    <div class="sandwich footer">
+        <p>Created by Jake Browning, 2022</p>
+    </div>
 </body>
 </html> 
