--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="canvas"></div>
     </div>
     <div class="sandwich footer">
-        <p>Created by Jake Browning, 2022</p>
+        <p>Created by Jake Browning for The Odin Project, 2022</p>
     </div>
 </body>
 </html> 
